Add NanoPlot in the workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,14 +9,16 @@
 // Global default params, used in configs
 params {
 
-    // TODO nf-core: Specify your pipeline's command line flags
     // Input options
-    input                      = null
+    sample                     = null
+    nanopore                   = null
+    illumina_r1                = null
+    illumina_r2                = null
+
     // References
-    genome                     = null
-    igenomes_base              = 's3://ngi-igenomes/igenomes/'
-    igenomes_ignore            = false
-    fasta                      = null// MultiQC options
+    reference                  = '/home/amunoz/keygene/data/references//T2T/v2.0/chm13v2.0.fa'
+
+    // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
     multiqc_logo               = null
