Add preprocessing and assembly functions

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,6 +20,76 @@ process {
 
     withName: FASTQC {
         ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/fastqc" },
+            mode: params.publish_dir_mode,
+            pattern: "*.html"
+        ]
+        ext.prefix = { "${meta.id}_raw" }
+    }
+
+    withName: NANOPLOT_RAW {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/nanoplot_raw" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{png,html,txt}"
+        ]
+        ext.prefix = 'raw'
+    }
+
+    withName: FILTLONG {
+        publishDir = [
+                path: { "${params.outdir}/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: "*.filtered.fastq.gz",
+            ]
+        ext.prefix = { "${meta.id}.filtered" }
+        ext.args = [
+            "--min_length ${params.filtlong_min_length}",
+            "--keep_percent ${params.filtlong_keep_percent}",
+            "--length_weight ${params.filtlong_length_weight}",
+            "--target_bases ${params.filtlong_target_bases}"
+        ].join(' ').trim()
+    }
+
+    withName: NANOPLOT_FILT {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/nanoplot_filt" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{png,html,txt}"
+        ]
+        ext.prefix = 'filtered'
+    }
+
+    withName: REPLACE_IUPAC {
+        publishDir = [
+                path: { "${params.outdir}/${meta.id}" },
+                mode: params.publish_dir_mode,
+                pattern: "*.corrected.fastq.gz",
+            ]
+        ext.prefix = { "${meta.id}.corrected" }
+    }
+
+    withName: NANOPLOT_CORR {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/nanoplot_corr" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{png,html,txt}"
+        ]
+        ext.prefix = 'corrected'
+    }
+
+    withName: FLYE {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/assembly" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{fasta,gfa,gv}.gz"
+        ]
+        ext.prefix = { "${meta.id}.assembled" }
+        ext.args = [
+            "--genome-size ${params.flye_genome_size}",
+            "--iterations ${params.flye_iterations}"
+        ].join(' ').trim()
     }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
