--- a/nextflow.config
+++ b/nextflow.config
@@ -10,13 +10,25 @@
 params {
 
     // Input options
-    sample                     = null
-    nanopore                   = null
-    illumina_r1                = null
-    illumina_r2                = null
+    input                      = null
 
     // References
-    reference                  = '/home/amunoz/keygene/data/references//T2T/v2.0/chm13v2.0.fa'
+    fasta                      = '/home/amunoz/keygene/data/references/T2T/v2.0/chm13v2.0.fa'
+    genome                     = null
+    igenomes_ignore            = true
+
+    // FiltLong options (target_bases = 3Gb * 30x = 90Gb)
+    filtlong_min_length        = 1000
+    filtlong_keep_percent      = 90
+    filtlong_length_weight     = 0.5
+    filtlong_genome_size       = 3000000000
+    filtlong_cov_min           = 30
+    filtlong_target_bases      = (params.filtlong_genome_size * params.filtlong_cov_min)
+
+    // Flye options
+    flye_mode                  = '--nano-corr'
+    flye_genome_size           = '3.2g'
+    flye_iterations            = 2
 
     // MultiQC options
     multiqc_config             = null
@@ -47,7 +59,7 @@ params {
     // Max resource options
     // Defaults only, expecting to be overwritten
     max_memory                 = '128.GB'
-    max_cpus                   = 16
+    max_cpus                   = 64
     max_time                   = '240.h'
 
     // Schema validation default options
