Add citations to CITATIONS.md file

--- a/conf/base.config
+++ b/conf/base.config
@@ -11,9 +11,9 @@
 process {
 
     // TODO nf-core: Check the defaults for all processes
-    cpus   = { check_max( 1    * task.attempt, 'cpus'   ) }
-    memory = { check_max( 6.GB * task.attempt, 'memory' ) }
-    time   = { check_max( 4.h  * task.attempt, 'time'   ) }
+    cpus   = { check_max( 16    * task.attempt, 'cpus'   ) }
+    memory = { check_max( 64.GB * task.attempt, 'memory' ) }
+    time   = { check_max( 24.h  * task.attempt, 'time'   ) }
 
     errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
     maxRetries    = 1
@@ -51,7 +51,12 @@ process {
     }
     withLabel:process_high_memory {
         cpus   = { check_max( 32     * task.attempt, 'cpus'    ) }
-        memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+        memory = { check_max( 200.GB * task.attempt, 'memory'  ) }
+    }
+    withLabel:process_high_memory_long {
+        cpus   = { check_max( 8       * task.attempt, 'cpus'    ) }
+        memory = { check_max( 1800.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 500.h   * task.attempt, 'time'    ) }
     }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
