--- a/conf/modules.config
+++ b/conf/modules.config
@@ -61,6 +61,12 @@ process {
         ext.prefix = 'filtered'
     }
 
+    withName: RATATOSK {
+        ext.args = [
+            "--cores ${params.ratatosk_cores}"
+        ].join(' ').trim()
+    }
+
     withName: REPLACE_IUPAC {
         publishDir = [
                 path: { "${params.outdir}/${meta.id}" },
@@ -88,7 +94,8 @@ process {
         ext.prefix = { "${meta.id}.assembled" }
         ext.args = [
             "--genome-size ${params.flye_genome_size}",
-            "--iterations ${params.flye_iterations}"
+            "--iterations ${params.flye_iterations}",
+            "--debug"
         ].join(' ').trim()
     }
 
