--- a/nextflow.config
+++ b/nextflow.config
@@ -25,8 +25,12 @@ params {
     filtlong_cov_min           = 30
     filtlong_target_bases      = (params.filtlong_genome_size * params.filtlong_cov_min)
 
+    // Ratatosk options
+    ratatosk_cores             = 16
+
     // Flye options
     flye_mode                  = '--nano-corr'
+    //flye_mode                  = '--nano-raw'
     flye_genome_size           = '3.2g'
     flye_iterations            = 2
 
@@ -58,9 +62,9 @@ params {
 
     // Max resource options
     // Defaults only, expecting to be overwritten
-    max_memory                 = '128.GB'
+    max_memory                 = '1800.GB'
     max_cpus                   = 64
-    max_time                   = '240.h'
+    max_time                   = '1000.h'
 
     // Schema validation default options
     validationFailUnrecognisedParams = false
