--- a/conf/modules.config
+++ b/conf/modules.config
@@ -62,6 +62,12 @@ process {
     }
 
     withName: RATATOSK {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fastq"
+        ]
+        ext.prefix = { "${meta.id}.corrected" }
         ext.args = [
             "--cores ${params.ratatosk_cores}"
         ].join(' ').trim()
@@ -97,6 +103,228 @@ process {
             "--iterations ${params.flye_iterations}",
             "--debug"
         ].join(' ').trim()
+    }
+
+    withName: MINIMAP2_ALIGN_ROUND_1 {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.paf"
+        ]
+        ext.prefix = { "${meta.id}.flye" }
+    }
+
+    withName: RACON_ROUND_1 {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta.gz"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon1" }
+    }
+
+    withName: MINIMAP2_ALIGN_ROUND_2 {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.paf"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon1" }
+    }
+
+    withName: RACON_ROUND_2 {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta.gz"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon2" }
+    }
+
+    withName: BWA_INDEX {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{amb,ann,bwt,pac,sa}"
+        ]
+    }
+
+    withName: BWA_ALIGN {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.bam"
+        ]
+    }
+
+    withName: INDEX_BAM {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.bai"
+        ]
+    }
+
+    withName: PICARD_SORTSAM {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.bam"
+        ]
+    }
+
+    withName: INDEX_SORTED_BAM {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.bai"
+        ]
+    }
+
+    withName: PILON {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/polishing" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{fasta}"
+        ]
+        ext.args2 = [
+            "-Xmx${params.pilon_max_mem}"
+        ].join(' ').trim()
+        ext.prefix = { "${meta.id}.flye.racon2.pilon" }
+    }
+
+    withName: SEQTK_SEQ {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta.gz"
+        ]
+        ext.args = [
+            "-a"
+        ].join(' ').trim()
+        ext.prefix = { "${meta.id}.corrected" }
+    }
+
+    withName: MINIMAP2_PURGEDUPS {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.paf",
+            saveAs: { "${meta.id}.paf" }
+        ]
+        ext.args = [
+            "-xmap-ont"
+        ].join(' ').trim()
+    }
+
+    withName: PURGEDUPS_PBCSTAT {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.PB.{base.cov,stat}"
+        ]
+    }
+
+    withName: PURGEDUPS_CALCUTS {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{calcuts.log,cutoffs}"
+        ]
+    }
+
+    withName: PURGEDUPS_SPLITFA {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.split.fasta.gz"
+        ]
+    }
+
+    withName: MINIMAP2_SPLITFA {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.paf",
+            saveAs: { "${meta.id}.split.paf" }
+        ]
+        ext.args = [
+            "-xasm5",
+            "-DP"
+        ].join(' ').trim()
+    }
+
+    withName: PURGEDUPS_PURGEDUPS {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{dups.bed,purge_dups.log}"
+        ]
+    }
+
+    withName: PURGEDUPS_GETSEQS {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/purgedups" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{hap,purged}.fa"
+        ]
+    }
+
+    withName: RAGTAG_CORRECT {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/scaffolds" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon2.pilon.purged.corrected" }
+    }
+
+    withName: RAGTAG_SCAFFOLD {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/scaffolds" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon2.pilon.purged.corrected.scaffold" }
+    }
+
+    withName: TGS_GAPCLOSER {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/gapfilling" },
+            mode: params.publish_dir_mode,
+            pattern: "*.fasta"
+        ]
+        ext.prefix = { "${meta.id}.flye.racon2.pilon.purged.corrected.scaffold.gapclosed" }
+        ext.args = [
+            "--thread ${params.tgs_gapcloser_threads}",
+            "--ne",
+            "--tgstype ${params.tgs_gapcloser_type}",
+            "--minmap_arg \' ${params.tgs_gapcloser_minmap}\'"
+        ].join(' ').trim()
+    }
+
+    withName: QUAST {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/quast" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: BUSCO {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/busco" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'MERYL_COUNT|MERYL_UNIONSUM|MERQURY' {
+        publishDir = [
+            path: { "${params.outdir}/${meta.id}/qcs/merqury" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
