--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,7 @@ params {
     input                      = null
 
     // References
-    fasta                      = '/home/amunoz/keygene/data/references/T2T/v2.0/chm13v2.0.fa'
+    fasta                      = './test_data/chm13v2.0.chr22.fa'
     genome                     = null
     igenomes_ignore            = true
 
@@ -21,7 +21,8 @@ params {
     filtlong_min_length        = 1000
     filtlong_keep_percent      = 90
     filtlong_length_weight     = 0.5
-    filtlong_genome_size       = 3000000000
+    //filtlong_genome_size       = 3000000000
+    filtlong_genome_size       = 250000
     filtlong_cov_min           = 30
     filtlong_target_bases      = (params.filtlong_genome_size * params.filtlong_cov_min)
 
@@ -33,6 +34,25 @@ params {
     //flye_mode                  = '--nano-raw'
     flye_genome_size           = '3.2g'
     flye_iterations            = 2
+
+    // Picard options
+    picard_sort_order          = 'coordinate'
+
+    // Pilon options
+    pilon_max_mem              = '1024G'
+    pilon_mode                 = 'frags'
+
+    // TGS-GapCloser options
+    tgs_gapcloser_threads      = '32'
+    tgs_gapcloser_minmap       = '-x map-ont -K 80M'
+    tgs_gapcloser_type         = 'ont'
+
+    // BUSCO options
+    busco_mode                 = 'genome'
+    busco_lineage              = 'primates_odb10'
+
+    // MERQURY options
+    meryl_kvalue               = 21
 
     // MultiQC options
     multiqc_config             = null
@@ -48,6 +68,7 @@ params {
     email_on_fail              = null
     plaintext_email            = false
     monochrome_logs            = false
+    monochromeLogs             = false
     hook_url                   = null
     help                       = false
     version                    = false
