Add test.config file

--- a/test_data/test.config
+++ b/test_data/test.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    nf-core/hybridassembly Nextflow config file
+    nf-core/hybridassembly TEST config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -13,7 +13,7 @@ params {
     input                      = null
 
     // References
-    fasta                      = '/path/to/chm13v2.0.chr22.fa'
+    fasta                      = 'chm13v2.0.chr22.fa'
     genome                     = null
     igenomes_ignore            = true
 
@@ -21,7 +21,7 @@ params {
     filtlong_min_length        = 1000
     filtlong_keep_percent      = 90
     filtlong_length_weight     = 0.5
-    filtlong_genome_size       = 3000000000
+    filtlong_genome_size       = 250000
     filtlong_cov_min           = 30
     filtlong_target_bases      = (params.filtlong_genome_size * params.filtlong_cov_min)
 
