--- a/test.config
+++ b/test.config
@@ -11,7 +11,7 @@ params {
 
     // Input/output options
     input                      = './test_data/samplesheet.test.csv'
-    outdir                     = './test_data'
+    outdir                     = './test_data/results'
 
     // References
     fasta                      = './test_data/chm13v2.0.chr22.fa'
