--- a/conf/modules.config
+++ b/conf/modules.config
@@ -141,43 +141,11 @@ process {
         ext.prefix = { "${meta.id}.flye.racon2" }
     }
 
-    withName: BWA_INDEX {
+    withName: 'BWA_INDEX|BWA_ALIGN|INDEX_BAM|PICARD_SORTSAM|INDEX_SORTED_BAM' {
         publishDir = [
             path: { "${params.outdir}/${meta.id}/polishing" },
             mode: params.publish_dir_mode,
-            pattern: "*.{amb,ann,bwt,pac,sa}"
-        ]
-    }
-
-    withName: BWA_ALIGN {
-        publishDir = [
-            path: { "${params.outdir}/${meta.id}/polishing" },
-            mode: params.publish_dir_mode,
-            pattern: "*.bam"
-        ]
-    }
-
-    withName: INDEX_BAM {
-        publishDir = [
-            path: { "${params.outdir}/${meta.id}/polishing" },
-            mode: params.publish_dir_mode,
-            pattern: "*.bai"
-        ]
-    }
-
-    withName: PICARD_SORTSAM {
-        publishDir = [
-            path: { "${params.outdir}/${meta.id}/polishing" },
-            mode: params.publish_dir_mode,
-            pattern: "*.bam"
-        ]
-    }
-
-    withName: INDEX_SORTED_BAM {
-        publishDir = [
-            path: { "${params.outdir}/${meta.id}/polishing" },
-            mode: params.publish_dir_mode,
-            pattern: "*.bai"
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
 
@@ -185,7 +153,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/${meta.id}/polishing" },
             mode: params.publish_dir_mode,
-            pattern: "*.{fasta}"
+            pattern: "*.pilon.fasta"
         ]
         ext.args2 = [
             "-Xmx${params.pilon_max_mem}"
@@ -207,7 +175,7 @@ process {
 
     withName: MINIMAP2_PURGEDUPS {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.paf",
             saveAs: { "${meta.id}.paf" }
@@ -219,7 +187,7 @@ process {
 
     withName: PURGEDUPS_PBCSTAT {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.PB.{base.cov,stat}"
         ]
@@ -227,7 +195,7 @@ process {
 
     withName: PURGEDUPS_CALCUTS {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.{calcuts.log,cutoffs}"
         ]
@@ -235,7 +203,7 @@ process {
 
     withName: PURGEDUPS_SPLITFA {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.split.fasta.gz"
         ]
@@ -243,7 +211,7 @@ process {
 
     withName: MINIMAP2_SPLITFA {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.paf",
             saveAs: { "${meta.id}.split.paf" }
@@ -256,7 +224,7 @@ process {
 
     withName: PURGEDUPS_PURGEDUPS {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.{dups.bed,purge_dups.log}"
         ]
@@ -264,7 +232,7 @@ process {
 
     withName: PURGEDUPS_GETSEQS {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/purgedups" },
+            path: { "${params.outdir}/${meta.id}/curation/purgedups" },
             mode: params.publish_dir_mode,
             pattern: "*.{hap,purged}.fa"
         ]
@@ -272,7 +240,7 @@ process {
 
     withName: RAGTAG_CORRECT {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/scaffolds" },
+            path: { "${params.outdir}/${meta.id}/curation/scaffolds" },
             mode: params.publish_dir_mode,
             pattern: "*.fasta"
         ]
@@ -281,18 +249,19 @@ process {
 
     withName: RAGTAG_SCAFFOLD {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/scaffolds" },
+            path: { "${params.outdir}/${meta.id}/curation/scaffolds" },
             mode: params.publish_dir_mode,
-            pattern: "*.fasta"
+            pattern: "*.scaffold.{fasta,stats,agp}"
         ]
         ext.prefix = { "${meta.id}.flye.racon2.pilon.purged.corrected.scaffold" }
     }
 
     withName: TGS_GAPCLOSER {
         publishDir = [
-            path: { "${params.outdir}/${meta.id}/gapfilling" },
+            path: { "${params.outdir}/${meta.id}/curation/gapfilling" },
             mode: params.publish_dir_mode,
-            pattern: "*.fasta"
+            pattern: "*.{fasta,gap_fill_detail}",
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.prefix = { "${meta.id}.flye.racon2.pilon.purged.corrected.scaffold.gapclosed" }
         ext.args = [
